// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin should create component 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createStore } from 'effector';
import { createComponent } from 'effector-react';
const foo = createStore('foo', {
  name: \\"foo\\",
  sid: \\"-jdfd95\\"
});
const Foo = createComponent(foo, (props, data) => null, {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 12
  },
  name: \\"Foo\\",
  sid: \\"Foo /src/babel/__tests__/fixtures/create-component.js [6, 12]}\\"
});"
`;

exports[`babel-plugin should create domain 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain as cd } from 'effector';
const notForPlugin = createDomain();
const domain = cd(\\"domain\\", {
  name: \\"domain\\",
  sid: \\"-r2jo9q\\"
});
const foo = cd('bar', {
  name: \\"foo\\",
  sid: \\"-kylwgu\\"
});"
`;

exports[`babel-plugin should create domain domain 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  name: \\"domain\\",
  sid: \\"-jsqfil\\"
});
const foo = domain.domain(\\"foo\\", {
  name: \\"foo\\",
  sid: \\"-veeiq1\\"
});
const bar = domain.domain('baz', {
  name: \\"bar\\",
  sid: \\"ksdvxf\\"
});"
`;

exports[`babel-plugin should create domain effect 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  name: \\"domain\\",
  sid: \\"-gfxji2\\"
});
const a = domain.effect(\\"a\\", {
  name: \\"a\\",
  sid: \\"-yaax6i\\"
});

const f = () => domain.effect(\\"f\\", {
  name: \\"f\\",
  sid: \\"jyl44k\\"
});

const b = domain.effect('hello', {
  name: \\"b\\",
  sid: \\"y8n8xx\\"
});

const g = () => domain.effect('baz', {
  name: \\"g\\",
  sid: \\"hgf89v\\"
});"
`;

exports[`babel-plugin should create domain event 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  name: \\"domain\\",
  sid: \\"3a2uet\\"
});
const a = domain.event(\\"a\\", {
  name: \\"a\\",
  sid: \\"-h01fmt\\"
});

const f = () => domain.event(\\"f\\", {
  name: \\"f\\",
  sid: \\"-nyhxip\\"
});

const b = domain.event('asm', {
  name: \\"b\\",
  sid: \\"p2tf20\\"
});

const g = () => domain.event('tasm', {
  name: \\"g\\",
  sid: \\"i4cx64\\"
});"
`;

exports[`babel-plugin should create domain store 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  name: \\"domain\\",
  sid: \\"-fpi1bm\\"
});
const a = domain.store('bar', {
  name: \\"a\\",
  sid: \\"z1hqlw\\"
});
const b = domain.store('h', {
  ɔ: {
    option: 'test',
    ['na' + 'me']: 'LOL'
  },
  name: \\"b\\",
  sid: \\"5m6wxe\\"
});
const c = domain.store('h', {
  ɔ: {
    name: 'test'
  },
  name: \\"c\\",
  sid: \\"-nt3wr4\\"
}); //$off

const d = domain.store('h', {
  ɔ: null,
  name: \\"d\\",
  sid: \\"a6fhta\\"
}); //$off

const e = domain.store('h', {
  ɔ: 4234,
  name: \\"e\\",
  sid: \\"7o9lyl\\"
});
const f = domain.store('h', {
  ɔ: {},
  name: \\"f\\",
  sid: \\"4p23pp\\"
});"
`;

exports[`babel-plugin should create effect 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createEffect as cf } from 'effector';
const notForPlugin = createEffect();
const foo = cf(\\"foo\\", {
  name: \\"foo\\",
  sid: \\"-hlt0gb\\"
});
const bar = cf('hello', {
  name: \\"bar\\",
  sid: \\"-ydp1p5\\"
});
const baz = cf({
  handler() {
    return 0;
  }

}, {
  name: \\"baz\\",
  sid: \\"-v7s7ya\\"
});
const quux = cf('nice', {
  ɔ: {
    handler() {
      return 0;
    }

  },
  name: \\"quux\\",
  sid: \\"-evyqqj\\"
});

const f = () => cf(\\"f\\", {
  name: \\"f\\",
  sid: \\"y82cl8\\"
});"
`;

exports[`babel-plugin should create event 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createEvent as e } from 'effector';
const notForPlugin = createEvent();
const foo = e(\\"foo\\", {
  name: \\"foo\\",
  sid: \\"qm3jl6\\"
});
const bar = e('hello', {
  name: \\"bar\\",
  sid: \\"f2obva\\"
});
const baz = e({
  name: 'nice'
}, {
  name: \\"baz\\",
  sid: \\"-yrvnsz\\"
});

const f = () => e(\\"f\\", {
  name: \\"f\\",
  sid: \\"vi2m03\\"
});"
`;

exports[`babel-plugin should create store 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createStore as cc } from 'effector';
const notForPlugin = createStore();
const foo = cc('foo', {
  name: \\"foo\\",
  sid: \\"75h1gk\\"
});
const a = cc('h', {
  name: \\"a\\",
  sid: \\"osbuqo\\"
});
const b = cc('h', {
  ɔ: {},
  name: \\"b\\",
  sid: \\"-yawrls\\"
}); //$off

const c = cc('h', {
  ɔ: 23020,
  name: \\"c\\",
  sid: \\"-lvzpkx\\"
});
const config = {
  option: 0
};
const dod = cc(null, {
  ɔ: config,
  name: \\"dod\\",
  sid: \\"qtb6qu\\"
});

const f = a => cc(a, {
  name: \\"f\\",
  sid: \\"42loz8\\"
});"
`;

exports[`babel-plugin should use store 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createStore } from 'effector';
import { useStore } from 'effector-react';
const foo = createStore('foo', {
  name: \\"foo\\",
  sid: \\"ciaon0\\"
});
const bar = createStore('bar', {
  name: \\"bar\\",
  sid: \\"-t7ybo2\\"
});

const Foo = () => {
  const data = useStore(foo, {
    loc: {
      file: _effectorFileName,
      line: 8,
      column: 15
    },
    name: \\"Foo\\",
    sid: \\"Foo /src/babel/__tests__/fixtures/use-store.js [8, 15]}\\"
  });
  const data0 = useStore(bar, {
    loc: {
      file: _effectorFileName,
      line: 9,
      column: 16
    },
    name: \\"Foo\\",
    sid: \\"Foo /src/babel/__tests__/fixtures/use-store.js [9, 16]}\\"
  });
};"
`;
